--- a/angularWorkSpace/angular.json
+++ b/angularWorkSpace/angular.json
@@ -125,5 +125,8 @@
       }
     }
   },
-  "defaultProject": "billingApp"
+  "defaultProject": "billingApp",
+  "cli": {
+    "analytics": false
+  }
 }
