--- a/angularWorkSpace/package.json
+++ b/angularWorkSpace/package.json
@@ -11,46 +11,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.2",
-    "@angular/common": "~11.1.2",
-    "@angular/compiler": "~11.1.2",
-    "@angular/core": "~11.1.2",
-    "@angular/fire": "^6.1.4",
-    "@angular/forms": "~11.1.2",
-    "@angular/platform-browser": "~11.1.2",
-    "@angular/platform-browser-dynamic": "~11.1.2",
-    "@angular/router": "~11.1.2",
-    "bootstrap": "^4.6.0",
-    "firebase": "^7.0 || ^8.0",
-    "rxjs": "~6.5.5",
-    "rxjs-compat": "^6.6.3",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "@angular/animations": "^18.1.3",
+    "@angular/common": "^18.1.3",
+    "@angular/compiler": "^18.1.3",
+    "@angular/core": "^18.1.3",
+    "@angular/fire": "^18.0.1",
+    "@angular/forms": "^18.1.3",
+    "@angular/platform-browser": "^18.1.3",
+    "@angular/platform-browser-dynamic": "^18.1.3",
+    "@angular/router": "^18.1.3",
+    "bootstrap": "^5.0.0",
+    "firebase": "^10.12.5",
+    "rxjs": "^7.8.1",
+    "rxjs-compat": "^6.6.7",
+    "tslib": "^2.6.3",
+    "zone.js": "^0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.2",
-    "@angular/cli": "~11.1.2",
-    "@angular/compiler-cli": "~11.1.2",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.2.3",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.3",
-    "@angular-devkit/architect": "0.1101.2",
-    "firebase-tools": "^8.0.0",
+    "@angular-devkit/build-angular": "^18.1.3",
+    "@angular/cli": "^18.1.3",
+    "@angular/compiler-cli": "^18.0.0",
+    "@types/node": "^18.0.0",
+    "@types/jasmine": "^4.0.0",
+    "@types/jasminewd2": "^2.0.10",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "^4.0.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.0.0",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.0.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "protractor": "^7.0.0",
+    "ts-node": "^10.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^5.4.0",
+    "@angular-devkit/architect": "^0.1801.3",
+    "firebase-tools": "^13.15.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "open": "^7.0.3"
+    "inquirer": "^8.0.0",
+    "inquirer-autocomplete-prompt": "^2.0.0",
+    "open": "^10.1.0"
   }
 }
